Linting improvements
Signed-off-by: Vessel9817 <151808241+Vessel9817@users.noreply.github.com>